--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql2": "^3.2.0"
+    "mysql2": "^3.2.0",
+    "nanoid": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
@@ -12,6 +13,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
